--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+:root {
+    --bg: rgb(30,35,69);
+}
 html {
     box-sizing: border-box;
   }
@@ -10,23 +13,24 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;   
+    gap: 25px;   
 
+}
+h1 {
+    margin: 0;
 }
 .container {
     margin: 0 auto;
     width: 75vh;
     height: 75vh;
-    /* border: 1px solid black; */
+    border: 5px solid rgb(82, 75, 75);
     display: flex;
     flex-wrap: wrap;
     
 }
 .square { 
-    /* width: 6.25%;
-    height: 6.25%; */
-    border: .05px solid black; 
-}
-.colorNumber {
-    background-color: green;
-}
+    border: 1px solid black; 
+} 
+/* .color {
+    background-color: var(--bg);
+} */
